Tue Apr 16 11:55:30 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Tools/gpbs.m (main): Fixed typo in log message - use gpbs, not
	gdnc, as log prefix.

2002-04-14  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSGraphicsContext.h (GSCurrentDevice): Change
	from DPScurrentgcdrawable.
	(GSSetDevice): Change from DPSsetgcdrawable.
	* Headers/gnustep/gui/DPSOperators.h: Idem.
	* Headers/gnustep/gui/GSMethodTable.h: Idem.
	* Headers/gnustep/gui/PSOperators.h: Idem.
	* Source/NSGraphicsContext.m: 
	
	* Headers/gnustep/gui/GSDisplayServer.h: Remove findwindow::::.
	* Source/GSDisplayServer.m: Likewise.

2002-04-11  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/config.h.bot: New define if rint missing
	* Source/NSBrowser.m: Use it.
	* Source/NSRulerView.m: Idem.
	* Source/NSMatrix.m: Idem.
	* Source/NSClipView.m: Idem.

Thu Apr 11 22:51:09 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSButtonCell.m ([-cellSize]): Use more space around
	bezeled/bordered buttons not containing only an image so that they
	get more pleasantly autosized without manual intervention.
	* Source/GSMemoryPanel.m ([-init]): Do not manually adjust the
	button size.

Thu Apr 11 22:15:51 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/NSAttributedString.h: Do not #include the
	whole <Foundation/Foundation>, but rather use the minimum @class
	and #include needed to have it parsed - so that everything
	compiles faster.
	* Headers/gnustep/gui/NSProgressIndicator.h: Added missing @class and #include
	directives.
	* Headers/gnustep/gui/NSTextStorage.h: Added missing #include.
	* Headers/gnustep/gui/NSTextView.m: Added missing @class.
	* Source/GSComboSupport.m: Added missing #includes.
	* Source/GSInfoPanel.m: Idem.	
	* Source/GSServicesManager.m: Idem.
	* Source/NSApplication.m: Idem.
	* Source/NSBox.m: Idem.
	* Source/NSBrowser.m: Idem.
	* Source/NSBrowserCell.m: Idem.
	* Source/NSBundleAdditions.m: Idem.
	* Source/NSButtonCell.m: Idem.
	* Source/NSCell.m: Idem.